Fix link line wrapping

--- a/css/main.css
+++ b/css/main.css
@@ -144,7 +144,7 @@ div.details h2 {
 div.details a, #Portfolio a {
     display: block;
     line-height: 1.5rem;
-    width: 116px;
+    width: 120px;
     border: 2px solid rgb(250, 200, 42);
     border-radius: 18px;
     margin: 0.5rem auto;
